--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,7 @@
     </article>
   </div>
 
+  <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   {% block scripts %}{% endblock %}
 </body>
